<resources>
    <string name="app_name">robot24</string>
    <string name="WhiteRobot">White Robot Image</string>
    <string name="RedRobot">Red Robot Image</string>
    <string name="YellowRobot">Yellow Robot Image</string>
    <string name="energyCounter">Energy Counter</string>
    <string name="reward_na">Reward\nA</string>
    <string name="reward_nb">Reward\nB</string>
    <string name="reward_nc">Reward\nC</string>
    <string name="energy">Energy\n</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="purchase_button_text">Purchase Reward</string>
    <string name="x_robot_s_turn">X Robot\'s Turn</string>
</resources>