<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutRobot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/photo_of_robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/WhiteRobot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/king_of_detroit_robot_white_large" />

        <LinearLayout
            android:id="@+id/linearLayoutCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:text="@string/energyCounter"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/energy"
                app:srcCompat="@drawable/energy_counter" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRobot"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="25dp">

        <LinearLayout
            android:id="@+id/linearLayoutA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Reward1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reward_na"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="461dp" />

            <LinearLayout
                android:id="@+id/linearLayoutAE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/energyA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/energy"
                    app:srcCompat="@drawable/energy_counter" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Reward2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reward_nb"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="461dp" />

            <LinearLayout
                android:id="@+id/linearLayoutBE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/energyB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/energy"
                    app:srcCompat="@drawable/energy_counter" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Reward3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reward_nc"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="461dp" />

            <LinearLayout
                android:id="@+id/linearLayoutCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/energyC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/energy"
                    app:srcCompat="@drawable/energy_counter" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>